Rebrand to SiteBotGPT, add footer, brand icon and favicon

--- a/public/test-widget.html
+++ b/public/test-widget.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Widget Test - Project Atlas</title>
+  <title>Widget Test - SiteBotGPT</title>
 </head>
 <body>
   <div style="max-width: 600px; margin: 48px auto; padding: 24px; font-family: system-ui, sans-serif;">
